# wenqingqian.github.io

./: .gitignore  404.html  _config.yml  blog.html  feed.xml  index.html  news.html  readme  robots.txt  sitemap.xml
cv/: cv.html  (+2 more)
generator/: CMakeLists.txt  generator  generator.cpp  generator_blog.cpp  md2html.cpp  run.sh
generator/include/: blog.h  blog_html.h
generator/raw_file/blog/: 20220515-dimension-reduction.cpp  20221001-cpp-note.cpp  20230302-linux.cpp  20230819-lua-syntax-tutorial.cpp  20240229-cuda-basic.cpp  20240312-make-deeplearningsys.cpp  20240401-pd-attentionisallyouneed.cpp  20240402-pd-mqa.cpp  20240405-pd-flashattn.cpp  20240405-pd-flashattn2.cpp  20240405-pd-glm.cpp  20240406-pd-glm-130b.cpp  20240407-pd-gpt3.5.cpp  20240408-pd-gpt1.cpp  20240408-pd-gpt3.cpp  20240409-pd-gpt2.cpp  20240410-pd-gpt4.cpp  20240410-pd-llama.cpp  20240411-pd-llama2.cpp  20240412-pd-lora.cpp  20240412-pd-qlora.cpp  20240413-pd-p-tuning.cpp  20240413-pd-p-tuning2.cpp  20240414-pd-gqa.cpp  20240416-pd-megatron-lm.cpp  20240422-sgemm.cpp  20240509-online-softmax.cpp  20240516-flash-attention.cpp  20240711-book-gpgpu1.cpp  CMakeLists.txt
generator/raw_file/blog_markdown/: 20220515-dimension-reduction.md  20221001-cpp-note.md  20230302-linux.md  20230819-lua-syntax-tutorial.md  20240229-cuda-basic.md  20240312-make-deeplearningsys.md  20240401-pd-attentionisallyouneed.md  20240402-pd-mqa.md  20240405-pd-flashattn.md  20240405-pd-flashattn2.md  20240405-pd-glm.md  20240406-pd-glm-130b.md  20240407-pd-gpt3.5.md  20240408-pd-gpt1.md  20240408-pd-gpt3.md  20240409-pd-gpt2.md  (+13 more)
(+154 files in other folders)
